--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
             <section class="info">
               <p>Vi köper SF-, fantasy-, skräck-, serier-, konstsamlingar i hela landet!</p>
+            </section>
 
             <section class="opening-hours">
               <h2>Open</h2>
@@ -41,7 +42,6 @@
                     <span>116 67 Stockholm</span>
             </section>
 
-            </section>
            
           </div>
 
@@ -68,13 +68,11 @@
 
           <section class="socials">
 
-              <h2>Follow Us</h2>
-
               <div class="buttons">
-                <a href="#" class="btn instagram" aria-label="Instagram">
+                <a href="https://www.instagram.com/sfantikvariatet/" class="btn instagram" aria-label="Instagram">
                   <img src="icons/instagram.svg" alt="Instagram Icon">
                 </a>
-                <a href="#" class="btn facebook" aria-label="Facebook">
+                <a href="https://www.facebook.com/sthlmsf" class="btn facebook" aria-label="Facebook">
                   <img src="icons/facebook.svg" alt="Facebook Icon">
                 </a>
               </div>
